--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "fetcher"]
 	path = fetcher
 	url = https://github.com/NataliaGuer/crawler-fetcher.git
+[submodule "broker"]
+	path = broker
+	url = https://github.com/NataliaGuer/crawler-broker.git
