--- a/compose.yaml
+++ b/compose.yaml
@@ -87,6 +87,11 @@ services:
 
   api:
     build: ./crawler-api
+    # develop:
+    #   watch:
+    #     - action: sync
+    #       path: ./crawler-api/src
+    #       target: /home/app/src
     ports:
       - "3002:3000"
     environment:
@@ -99,6 +104,8 @@ services:
     networks:
       - app-network
     depends_on:
+      rabbitmq:
+        condition: service_healthy
       db:
         condition: service_healthy
 
